crates/snapshot-tests/tests/snapshots/parser__newline_literal.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[UnterminatedString]: unterminated literal string, expected `'` at `a`
  ┌─ newline_literal:1:6
  │
1 │ a = '
  │      ^ expected `'`


error: unterminated literal string, expected `'` at `a`
 --> newline_literal:1:6
  |
1 | a = '
  |      ^ expected `'`
Error {
    kind: "UnterminatedString",
    message: "unterminated literal string, expected `'`",
    span: 5..5,
    path: Some(
        "a",
    ),
}
